--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>money-manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>money-manager</name>
-	<description>Money managert </description>
+	<description>Money manager </description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -27,7 +27,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
