--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<scope>test</scope>
+			<version>3.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+			<version>42.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -40,6 +43,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<version>3.2.2</version>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
